2011-05-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.0.2

2011-05-16 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected handling of components relations in workspaces, resolves #26828

2011-03-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Removed dependency on extensions load order for allowed property, resolves #13929

2010-12-28 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Released to TER as version 1.0.1

2010-12-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Changed consumer member variable from static to "normal" in the displaycontroller workflow, resolves #11390 (thanks to Adrien Crivelli)
	* Removed tx_displaycontroller::sub() method, resolves #11624

2010-12-20 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Added FAQ in manual, with first question about trouble when saving a displaycontroller, references #11549

2010-10-23 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* Corrected merging of TypoScript configuration, resolves #10410

2010-09-27 Francois Suter (Cobweb)  <typo3@cobweb.ch>

	* First public release