@@ -1,3 +1,7 @@
+2011-07-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Changed empty filter check to use new API, resolves #28288
+
 2011-05-18 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Released to TER as version 1.0.2
